# ROS2-robotics-development-automation-tool

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  package.json  pnpm-workspace.yaml  pyproject.toml
app/: index.html  (+4 more)
backend/: CLAUDE.md  pyproject.toml
backend/roboforge/: __init__.py  __main__.py  main.py  server.py
backend/roboforge/agents/: base.py  coder_agent.py  debugger_agent.py  deployer_agent.py  loop.py  planner.py  reviewer_agent.py  setup_agent.py
backend/roboforge/api/: deps.py  routes_agents.py  routes_auth.py  routes_chat.py  routes_health.py  routes_install.py  routes_projects.py  routes_providers.py  routes_rag.py  routes_ros2.py  routes_sim.py  routes_urdf.py  ws_events.py  ws_terminal.py
backend/roboforge/auth/: __init__.py  google.py
backend/roboforge/cli/: main.py
backend/roboforge/config/: defaults.yaml  loader.py  paths.py  schema.py
backend/roboforge/install/: plan.py  runner.py
backend/roboforge/ipc/: envelope.py  event_bus.py
backend/roboforge/keychain/: base.py  file_fallback.py  keyring_backend.py  service.py
backend/roboforge/projects/: manager.py
backend/roboforge/providers/: _template.py  auth.py  base.py  claude.py  gemini.py  mistral.py  ollama.py  openai.py  registry.py
backend/roboforge/rag/: embeddings.py  indexer.py  store.py
backend/roboforge/ros2/: colcon.py  detector.py  env.py  installer.py  introspection.py  launcher.py  node_graph.py  rosbridge.py  rosdep.py
backend/roboforge/sim/: base.py  bridge_ws.py  gazebo_modern.py
backend/roboforge/urdf/: parser.py  validate.py
backend/tests/: conftest.py
(+58 files in other folders)
