# Root pyproject.toml — uv-managed Python workspace.
# The actual backend package lives in backend/ with its own pyproject.toml
# (added in Phase 2). This file pins the project-wide Python version and
# tooling defaults so that `uv sync` from the repo root works.

[project]
name = "roboforge-workspace"
version = "0.0.1"
description = "RoboForge AI workspace root (see backend/ for the runtime package)"
requires-python = ">=3.11,<3.13"
license = { text = "MIT" }
readme = "README.md"

[tool.uv]
package = false

[tool.uv.workspace]
members = ["backend"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]  # line length handled by formatter

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
asyncio_mode = "auto"
